API specs finished
