# server/repositories/user_anime_repository.js
@@ -1,0 +1,9 @@
+const UserAnime = require('../models/user_anime');
+
+const searchUserAnimes = async (search = '', skip = 0, limit = 0) => {
+    return await UserAnime.find({search: new RegExp(search, 'i')}, null, {skip: skip, limit: limit}).populate('anime');
+};
+
+module.exports = {
+    searchUserAnimes: searchUserAnimes
+};
